Fix latent bugs: core spawn, Linux links, sort contracts, wire encoding
Batch of correctness fixes found auditing the ported decompiled code:

- ExecConsole: use exec(String[]) so a core path with spaces (Program
  Files) launches instead of running "C:\Program"; null-safe parent dir.
- WebLauncher: on Linux open links via Program.launch/xdg-open instead
  of the dead mozilla/konqueror/netscape chain (still honours a
  configured browser).
- Comparators: make Addr (two firewalled peers), client State (two
  downloading clients) and the downloads Rate/State column antisymmetric
  so TimSort no longer throws "violates its general contract".
- MessageEncoder: stop masking the top byte with 0x7FFFFFFF, which
  dropped bit 31 of ints with the high bit set on the wire.
- File.readChunkAges: guard Integer.parseInt (like readAge) so a bad
  core token no longer breaks the socket read loop.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>